# agents-example

./: .gitignore
mastra-exmaple/: Makefile  package-lock.json  package.json
mastra-exmaple/src/llm/embedding/: index.ts
mastra-exmaple/src/mastra/: index.ts
mastra-exmaple/src/mastra/agents/: opportunity-agent.ts
mastra-exmaple/src/mastra/tools/: search-patents.ts
mastra-exmaple/src/mastra/tools/deep-research/: index.ts  model.ts  typing.ts
mastra-exmaple/src/mongo/: connection.ts
mastra-exmaple/src/search/: patent.ts
parlant-example/: .env.example  Makefile  README.md  pyproject.toml
parlant-example/src/: __init__.py  agent_example.py  main.py
